<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/backButton"
            android:padding="@dimen/margin_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/back_button" />


        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:src="@drawable/logo"
            android:text="@string/my_account"
            android:textAllCaps="true"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_toolbar"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/lbl_profile_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/profile_details"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:src="@drawable/ic_edit"
                app:layout_constraintStart_toEndOf="@+id/lbl_profile_detail" />


            <ImageView
                android:id="@+id/img_drop_down"
                android:padding="5dp"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dropdown"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/img_close"
                android:padding="5dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_up"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:background="@color/Lightgrey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/lbl_profile_detail"
                android:layout_height="1dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile_details">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="First name"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/first_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:enabled="false"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:minHeight="50dp"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="Last name"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/last_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:enabled="false"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:minHeight="50dp"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="Class"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/class_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:minHeight="50dp"
                    android:singleLine="true"
                    android:textColor="@color/black">

                    <TextView
                        android:id="@+id/txt_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="Parent's email id"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pEmail_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:enabled="false"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ask_credits"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile_"
            android:padding="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_ask_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ask_credits"
                android:textColor="@color/black" />

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/lbl_ask_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/you_have_x_credits" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_credits"
                android:text="BUY CREDITS"
                app:cornerRadius="10dp"
                android:background="@drawable/button_dark_gray"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <TextView
                android:background="@color/Lightgrey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/btn_credits"
                android:layout_height="1dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_pay_history"
            app:layout_constraintTop_toBottomOf="@+id/cl_ask_credits"
            android:padding="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_pay_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/pay_history"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_pay_history"
                app:layout_constraintTop_toBottomOf="@+id/lbl_pay_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/you_have_x_credits" />

            <TextView
                android:background="@color/Lightgrey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/txt_pay_history"
                android:layout_height="1dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_tc"
            app:layout_constraintTop_toBottomOf="@+id/cl_pay_history"
            android:padding="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/term_condition"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_tc"
                app:layout_constraintTop_toBottomOf="@+id/lbl_tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/you_have_x_credits" />

            <TextView
                android:background="@color/Lightgrey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/txt_tc"
                android:layout_height="1dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>